Fix overflowing text

--- a/styles/global.css
+++ b/styles/global.css
@@ -33,6 +33,10 @@ body,
   resize: none;
 }
 
+.Text--markdown {
+  overflow-wrap: break-word;
+}
+
 .Text--markdown a {
   text-decoration: underline;
 }
